src/objects/ExpenditureType__c.object
<CustomObject>
    <fields>
        <fullName>CostReportCategory__c</fullName>
        <label>Cost Report Category</label>
        <picklist>
            <picklistValues>
                <fullName>EXPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LABOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureCategory__c</fullName>
        <label>Expenditure Category</label>
        <picklist>
            <picklistValues>
                <fullName>Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Related Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acutal Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Reserves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Centre Allocations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subconsultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PLReportCategory__c</fullName>
        <label>P&amp;L Report Category</label>
        <picklist>
            <picklistValues>
                <fullName>ODC - Exps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODC - Subs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODC - Contingency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overhead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResourceTypeDetail__c</fullName>
        <label>Resource Type Detail</label>
        <picklist>
            <picklistValues>
                <fullName>SUBS - Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Contingency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Emp Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAB - Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAB - OT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAB - Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Overhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Reserves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - SCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBS - Subconsultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS - Usages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResourceType__c</fullName>
        <label>Resource Type</label>
        <picklist>
            <picklistValues>
                <fullName>SUBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>CURRENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Expenditure Type</label>
    <nameField>
        <label>Expenditure Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenditure Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>